Solutions we provide alignment issue

--- a/css/solutions-we-provide.css
+++ b/css/solutions-we-provide.css
@@ -1,7 +1,10 @@
 .center {
   text-align: center;
 }
-
+.table td,
+.table th {
+  vertical-align: middle;
+}
 /* Mobile view */
 @media (max-width: 600px) {
   td > img {
